<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    android:layout_alignParentBottom="true"
    tools:openDrawer="start"
    tools:context=".Main_Nav"
   >
    <include layout="@layout/toolbar"/>
    <include
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        layout="@layout/activity_home"/>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:translationZ="25dp"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" >


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>