<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="Profile"

            />
        <item android:id="@+id/nav_services"
            android:icon="@drawable/ic_baseline_featured_play_list_24"
            android:title="Apply for a Service"

            />
        <item android:id="@+id/nav_sign"
            android:icon="@drawable/ic_baseline_settings_power_24"
            android:title="Sign Out"

            />
        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="Search"

            />
    </group>
    <item
        android:visible="true"
        android:titleCondensed="Communicate"
        android:enabled="true"
        android:id="@+id/communicate"
        android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_rates"
                android:icon="@drawable/ic_baseline_rate_review_24"
                android:title="Rate Us"
               />
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"
              />
        </menu>
    </item>
</menu>