...
            android:layout_height="38dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="11dp"
            android:text="Sort By"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/spinner_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEdit" />

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
...
